# EG2018

./: CMakeLists.txt  ReadMe.md
data/Bermano/: Bermano.contour
data/ferretbrain/: ferretbrain.contour
data/mousebrain/: mousebrain.contour  outctrmapping.ctr  tctrContourmapping.contour
data/newliver/: newliver.contour
lib/triangle/: CMakeLists.txt  Makefile  cmake_install.cmake  triangle.c
src/: .qmake.stash  fcm.pro  main.cpp
src/constrainOpt/: CMakeLists.txt  DynamicMesh.cpp  DynamicMesh.h  Makefile  a_aclass_contour.cpp  a_aclass_crosssection.cpp  a_class_iteropt.cpp  aclass.h  cmake_install.cmake  transformer.cpp
src/mymesh/: CMakeLists.txt  Makefile  UnionFind.cpp  cmake_install.cmake  contour.cpp  contour.h  contour_fcm.cpp  contour_geo.cpp  geo_curv.cpp  geo_curv.h  my_mesh.cpp  my_mesh.h  readers.cpp  readers.h  utility.h
